# kg-lab-ws23-task3

./: .gitignore  CONTRIBUTION.md  README.md  WikiDataQuery.py  apikey.txt  dummy.py  nlp_tool.py  nlpencoder.py  pyproject.toml  requirements.txt  requirments.txt  test_dummy.py
.github/workflows/: python-package.yml
cache/: README.md
datasets/: README.md
datasets/.conferencecorpus/crossref/: crossref-1.json  crossref-10.json  crossref-11.json  crossref-12.json  crossref-13.json  crossref-14.json  crossref-15.json  crossref-16.json  crossref-17.json  crossref-18.json  crossref-19.json  crossref-2.json  crossref-20.json  crossref-21.json  crossref-22.json  crossref-23.json  crossref-24.json  crossref-25.json  crossref-26.json  crossref-27.json  crossref-28.json  crossref-29.json  crossref-3.json  crossref-30.json  crossref-31.json  crossref-32.json  crossref-33.json  crossref-34.json  crossref-35.json  crossref-36.json  crossref-37.json  crossref-38.json  crossref-39.json  crossref-4.json  crossref-40.json  crossref-41.json  crossref-42.json  crossref-43.json  crossref-44.json  crossref-45.json  (+27 more)
datasets/AIDA/Venues_Dataset202205/data/conferenceFolderStruct/1/1122418201/: 1122418201.json
datasets/AIDA/Venues_Dataset202205/data/conferenceFolderStruct/1/1127463865/: 1127463865.json
datasets/AIDA/Venues_Dataset202205/data/conferenceFolderStruct/1/1131341566/: 1131341566.json
datasets/AIDA/Venues_Dataset202205/data/conferenceFolderStruct/1/1131830996/: 1131830996.json
datasets/AIDA/Venues_Dataset202205/data/conferenceFolderStruct/1/1132363081/: 1132363081.json
datasets/AIDA/Venues_Dataset202205/data/conferenceFolderStruct/1/1133365479/: 1133365479.json
datasets/AIDA/Venues_Dataset202205/data/conferenceFolderStruct/1/1133691915/: 1133691915.json
datasets/AIDA/Venues_Dataset202205/data/conferenceFolderStruct/1/1134804816/: 1134804816.json
datasets/AIDA/Venues_Dataset202205/data/conferenceFolderStruct/1/1135681269/: 1135681269.json
datasets/proceedings.com/: testset_v2.csv
datasets/wikidata/: testset_v1.csv  testset_v1_1_classified.csv  testset_v1_opt.csv  wikidata_conf_data.csv
results/: README.md  output_tokenizer_testset.json  wikidata_assessment.json
scripts/: dev-dep.sh  resources.sh  run.sh  solve_unclear.sh  test.sh
source/: API.py  APICORE.py  Cache.py  Comparor.py  Downloader.py  Encoder.py  Evaluator.py  EventClass.py  HelperFunctions.py  PPNIdentifier.py  Preprocessor.py  SearchEngine.py  Semantifier.py  Tokenizer.py  UpdateSources.py  WikidataUpdater.py  bert_tokenizer.py  crossref_api_doc.rst  data_search.py  data_search_opt.py  esc_cmd.py  gui.py  nlpencoder.py  synonymes.py  testset_evaluation.py  wikidata_analysis.ipynb  wikidataquery.py
source/analysis/: README.md  conferencecorpus_analysis.ipynb  create_test_dataset.ipynb  merge_confcorpus.ipynb  proceedings_analysis.ipynb  similarity_analysis.ipynb  wikidata_analysis.ipynb
source/archive/: APICORE.py  COREAPI.py  data_search.py
source/openai_framework/: api_secrets.py  nlp.py  nlp_testing.py  openai-query.py
source/pyLookupParser/: Signature.py  Tokenizer.py
source/pyLookupParser/resources/: cityNames.yaml  countries.yaml  years.yaml
test/: testWikidataUpdater.py  test_ProceedingsUpdater.py  test_WikidataUpdater.py  test_api.py  test_comparor.py  test_downloader.py  test_dummy.py  test_encoder.py  test_searchengine.py  test_synonymes.py  test_tokenizer.py  test_wikidata.py
test/evaluation/: testset_evaluation.py  testset_v1_eval.py
(+1994 files in other folders)
