[project]
name = "event series completion"
#check if sufficient
dependencies = [
  "neo4j==5.14.0",
  "requests-html==0.10.0",
  "sparqlwrapper==2.0.0"
]

authors = [
  {name = "Efe Bilgili", email = "efe.bozkurt.bilgili@rwth-aachen.de"},
  {name = "Lukas J채schke", email = "lukas.j채schke@rwth-aachen.de"},
  {name = "Christophe Haag", email = "christophe.haag@rwth-aachen.de"},
  {name = "Daniel Quirmbach", email = "daniel.quirmbach@rwth-aachen.de"},
]

maintainers = [
  {name = "Efe Bilgili", email = "efe.bozkurt.bilgili@rwth-aachen.de"},
  {name = "Lukas J채schke", email = "lukas.j채schke@rwth-aachen.de"},
  {name = "Christophe Haag", email = "christophe.haag@rwth-aachen.de"},
  {name = "Daniel Quirmbach", email = "daniel.quirmbach@rwth-aachen.de"},
]

readme = "README.md"
requires-python = ">=3.11"
version = "0.0.1"

[project.urls]
Home = "https://github.com/olafbombach/kg-lab-ws23-task3"

