[project]
name = "event series completion"
dynamic = ["dependencies"]

authors = [
  {name = "Efe Bilgili", email = "efe.bozkurt.bilgili@rwth-aachen.de"},
  {name = "Lukas Jäschke", email = "lukas.jaeschke@rwth-aachen.de"},
  {name = "Christophe Haag", email = "christophe.haag@rwth-aachen.de"},
  {name = "Daniel Quirmbach", email = "daniel.quirmbach@rwth-aachen.de"},
]

maintainers = [
  {name = "Efe Bilgili", email = "efe.bozkurt.bilgili@rwth-aachen.de"},
  {name = "Lukas Jäschke", email = "lukas.jaeschke@rwth-aachen.de"},
  {name = "Christophe Haag", email = "christophe.haag@rwth-aachen.de"},
  {name = "Daniel Quirmbach", email = "daniel.quirmbach@rwth-aachen.de"},
]

readme = "README.md"
requires-python = ">=3.9"
version = "0.0.1"

[project.urls]
Home = "https://github.com/olafbombach/kg-lab-ws23-task3"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}